<resources>
    <string name="app_name">B-Unit</string>
    <string name="menu_toggle_rpn">Toggle RPN Display</string>
    <string name="title_activity_converter">B-Unit</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="input_hint">Input from value</string>
    <string name="result_default"></string>
    <string name="rpn_default"></string>
    <string-array name="conversion_type_array">
        <item>Length</item>
        <item>Speed</item>
        <item>Liquid Volume</item>
        <item>Weight / Mass</item>
        <item>Temperature</item>
        <item>Volume</item>
        <item>Fuel Consumption</item>
    </string-array>
    <string-array name="conversion_category_units0">
        <item>Centimetres</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Metres</item>
        <item>Kilometres</item>
        <item>Miles</item>
    </string-array>
    <string-array name="conversion_category_units1">
        <item>Feet per Second</item>
        <item>Metres per Second</item>
        <item>Kilometres per Hour</item>
        <item>Miles per Hour</item>
        <item>Mach</item>
    </string-array>
    <string-array name="conversion_category_units2">
        <item>Millilitres</item>
        <item>Centilitres</item>
        <item>Litres</item>
        <item>Pints (US)</item>
        <item>Pints (Imperial)</item>
        <item>Quarts (US)</item>
        <item>Quarts (Imperial)</item>
        <item>Gallons (US)</item>
        <item>Gallons (Imperial)</item>
    </string-array>
    <string-array name="conversion_category_units3">
        <item>Milligrams</item>
        <item>Grams</item>
        <item>Ounces</item>
        <item>Pounds</item>
        <item>Kilograms</item>
        <item>Stones</item>
        <item>Short Tons</item>
        <item>Tonnes</item>
        <item>Long Tons</item>
    </string-array>
    <string-array name="conversion_category_units4">
        <item>Fahrenheit</item>
        <item>Celcius</item>
        <item>Kelvin</item>
        <item>Gas Mark</item>
    </string-array>
    <string-array name="conversion_category_units5">
        <item>Cubic Centimetres</item>
        <item>Cubic Inches</item>
        <item>Cubic Feet</item>
        <item>Cubic Yards</item>
        <item>Cubic Metres</item>
        <item>Cubic Kilometres</item>
        <item>Cubic Miles</item>
    </string-array>
    <string-array name="conversion_category_units6">
        <item>Miles per Gallon (US)</item>
        <item>Miles per Gallon (Imperial)</item>
        <item>Kilometres per Litre</item>
        <item>Miles per Litre</item>
        <item>Litres per 100 Kilometres</item>
    </string-array>
    <string-array name="conversion_matrix0">

        
        <item>1,*</item>
        
        <item>2.54,/</item>
        
        <item>30.48,/</item>
        
        <item>2.54,/,36,/</item>
        
        <item>100,/</item>
        
        <item>100000,/</item>
        
        <item>2.54,/,63360,/</item>
        
        <item>2.54,*</item>
        
        <item>1,*</item>
        
        <item>12,/</item>
        
        <item>36,/</item>
        
        <item>2.54,*,100,/</item>
        
        <item>2.54,*,100000,/</item>
        
        <item>63360,/</item>
        
        <item>30.48,*</item>
        
        <item>12,*</item>
        
        <item>1,*</item>
        
        <item>3,/</item>
        
        <item>.3048,*</item>
        
        <item>30.48,*,100000,/</item>
        
        <item>5280,/</item>
        
        <item>91.44,*</item>
        
        <item>36,*</item>
        
        <item>3,*</item>
        
        <item>1,*</item>
        
        <item>2.54,*,100,/,36,*</item>
        
        <item>2.54,*,100,/,36,*,1000,/</item>
        
        <item>1760,/</item>
        
        <item>100,*</item>
        
        <item>2.54,/,100,*</item>
        
        <item>2.54,/,100,*,12,/</item>
        
        <item>0.9144,/</item>
        
        <item>1,*</item>
        
        <item>1000,/</item>
        
        <item>2.54,/,100,*,12,/,5280,/</item>
        
        <item>100000,*</item>
        
        <item>39370.0787,*</item>
        
        <item>2.54,/,100,*,12,/,1000,*</item>
        
        <item>0.9144,/,1000,*</item>
        
        <item>1000,*</item>
        
        <item>1,*</item>
        
        <item>1609.344,/,1000,*</item>
        
        <item>91.44,*,1760,*</item>
        
        <item>63360,*</item>
        
        <item>5280,*</item>
        
        <item>1760,*</item>
        
        <item>1609.344,*</item>
        
        <item>1.609344,*</item>
        
        <item>1,*</item>
    </string-array>
    <string-array name="conversion_matrix1">

        
        <item>1,*</item>
        
        <item>0.3048,*</item>
        
        <item>0.3048,*,18,5,/,*</item>
        
        <item>0.3048,*,3125,1397,/,*</item>
        
        <item>0.3048,*,343.2,/</item>
        
        <item>0.3048,/</item>
        
        <item>1,*</item>
        
        <item>18,5,/,*</item>
        
        <item>3125,1397,/,*</item>
        
        <item>343.2,/</item>
        
        <item>5,18,/,*,0.3048,/</item>
        
        <item>5,18,/,*</item>
        
        <item>1,*</item>
        
        <item>5,18,/,*,3125,1397,/,*</item>
        
        <item>5,18,/,*,343.2,/</item>
        
        <item>1397,3125,/,*,0.3048,/</item>
        
        <item>1397,3125,/,*</item>
        
        <item>1397,3125,/,*,18,5,/,*</item>
        
        <item>1,*</item>
        
        <item>1397,3125,/,*,343.2,/</item>
        
        <item>343.2,*,0.3048,/</item>
        
        <item>343.2,*</item>
        
        <item>343.2,*,18,5,/,*</item>
        
        <item>343.2,*,3125,1397,/,*</item>
        
        <item>1,*</item>
    </string-array>
    <string-array name="conversion_matrix2">

        
        <item>1,*</item>
        
        <item>0.001,*,0.01,/</item>
        
        <item>0.001,*</item>
        
        <item>0.001,*,2.11337642,*</item>
        
        <item>0.001,*,1.75975326,*</item>
        
        <item>0.001,*,1.05668821,*</item>
        
        <item>0.001,*,0.87987663,*</item>
        
        <item>0.001,*,0.264172052,*</item>
        
        <item>0.001,*,0.219969157,*</item>
        
        <item>0.01,*,0.001,/</item>
        
        <item>1,*</item>
        
        <item>0.01,*</item>
        
        <item>0.01,*,2.11337642,*</item>
        
        <item>0.01,*,1.75975326,*</item>
        
        <item>0.01,*,1.05668821,*</item>
        
        <item>0.01,*,0.87987663,*</item>
        
        <item>0.01,*,0.264172052,*</item>
        
        <item>0.01,*,0.219969157,*</item>
        
        <item>0.001,/</item>
        
        <item>0.01,/</item>
        
        <item>1,*</item>
        
        <item>2.11337642,*</item>
        
        <item>1.75975326,*</item>
        
        <item>1.05668821,*</item>
        
        <item>0.87987663,*</item>
        
        <item>0.264172052,*</item>
        
        <item>0.219969157,*</item>
        
        <item>2.11337642,/,0.001,/</item>
        
        <item>2.11337642,/,0.01,/</item>
        
        <item>2.11337642,/</item>
        
        <item>1,*</item>
        
        <item>2.11337642,/,1.75975326,*</item>
        
        <item>2.11337642,/,1.05668821,*</item>
        
        <item>2.11337642,/,0.87987663,*</item>
        
        <item>2.11337642,/,0.264172052,*</item>
        
        <item>2.11337642,/,0.219969157,*</item>
        
        <item>1.75975326,/,0.001,/</item>
        
        <item>1.75975326,/,0.01,/</item>
        
        <item>1.75975326,/</item>
        
        <item>1.75975326,/,2.11337642,*</item>
        
        <item>1,*</item>
        
        <item>1.75975326,/,1.05668821,*</item>
        
        <item>1.75975326,/,0.87987663,*</item>
        
        <item>1.75975326,/,0.264172052,*</item>
        
        <item>1.75975326,/,0.219969157,*</item>
        
        <item>1.05668821,/,0.001,/</item>
        
        <item>1.05668821,/,0.01,/</item>
        
        <item>1.05668821,/</item>
        
        <item>1.05668821,/,2.11337642,*</item>
        
        <item>1.05668821,/,1.75975326,*</item>
        
        <item>1.05668821,/,1.05668821,*</item>
        
        <item>1.05668821,/,0.87987663,*</item>
        
        <item>1.05668821,/,0.264172052,*</item>
        
        <item>1.05668821,/,0.219969157,*</item>
        
        <item>0.87987663,/,0.001,/</item>
        
        <item>0.87987663,/,0.01,/</item>
        
        <item>0.87987663,/</item>
        
        <item>0.87987663,/,2.11337642,*</item>
        
        <item>0.87987663,/,1.75975326,*</item>
        
        <item>0.87987663,/,1.05668821,*</item>
        
        <item>1,*</item>
        
        <item>0.87987663,/,0.264172052,*</item>
        
        <item>0.87987663,/,0.219969157,*</item>
        
        <item>0.264172052,/,0.001,/</item>
        
        <item>0.264172052,/,0.01,/</item>
        
        <item>0.264172052,/</item>
        
        <item>0.264172052,/,2.11337642,*</item>
        
        <item>0.264172052,/,1.75975326,*</item>
        
        <item>0.264172052,/,1.05668821,*</item>
        
        <item>0.264172052,/,0.87987663,*</item>
        
        <item>1,*</item>
        
        <item>0.264172052,/,0.219969157,*</item>
        
        <item>0.219969157,/,0.001,/</item>
        
        <item>0.219969157,/,0.01,/</item>
        
        <item>0.219969157,/</item>
        
        <item>0.219969157,/,2.11337642,*</item>
        
        <item>0.219969157,/,1.75975326,*</item>
        
        <item>0.219969157,/,1.05668821,*</item>
        
        <item>0.219969157,/,0.87987663,*</item>
        
        <item>0.219969157,/,0.264172052,*</item>
        
        <item>1,*</item>
    </string-array>
</resources>